# eudi-web3-bridge

./: .gitignore  .gitmodules  README.md
scripts/: ecdsa-native-verification.json  generate-ecdsa-native-input.js
zk-backend/: pom.xml
zk-backend/data/blockchain-wallets/: karl-blockchain-wallet.json  philipp-blockchain-wallet.json  philipp.json  test-blockchain-wallet.json  test2-blockchain-wallet.json
zk-backend/data/eudi-wallets/: karl-eudi-wallet.json  philipp-eudi-wallet.json  philipp.json  test-eudi-wallet.json  test2-eudi-wallet.json
zk-backend/data/proof-preparation/: karl-blockchain-key-derivation.json  karl-eudi-credential-public-key-check.json  karl-eudi-credential-verification.json  karl-eudi-wallet-key-derivation.json  karl_recursive.json  philipp-blockchain-key-derivation.json  philipp-credential-wallet-binding.json  philipp-eudi-credential-public-key-check.json  philipp-eudi-credential-verification.json  philipp-eudi-wallet-key-derivation.json  philipp_recursive.json  test-blockchain-key-derivation.json  test-credential-wallet-binding-extended.json  test-credential-wallet-binding.json  test-eudi-credential-public-key-check.json  test-eudi-credential-verification-extended.json  test-eudi-credential-verification.json  test-eudi-wallet-key-derivation.json  test2-blockchain-key-derivation.json  test2-credential-wallet-binding.json  test2-eudi-credential-public-key-check.json  test2-eudi-credential-verification.json  test2-eudi-wallet-key-derivation.json  test_inner_proof.json  test_outer_proof.json  test_recursive.json  (+1 more)
zk-monolithic/: package-lock.json
zk-monolithic-experiments/: BN254_ECDSA_TEST_VECTORS_SUMMARY.md  BN254_circom_fixed.py  addition_result.json  analyze_field.py  backwards_ecdsa.py  bn254_ecdsa_test_vectors.json  circom_compatible_ecdsa.json  circom_fixed_output.json  complete_analysis.json  correct_ecdsa_output.json  corrected_minimal.json  corrected_minimal.py  create_perfect_vector.py  debug_bn254.py  debug_input.json  debug_real.json  debug_real_witness.json  debug_witness.json  different_points.py  ecdsa_output.json  field_modulus_analysis.py  field_test.json  field_test_witness.json  final_bn254.py  final_bn254_output.json  final_debug_result.json  final_ecdsa_data.json  final_test.json  final_working_ecdsa.py  generate_bn254_ecdsa_vectors.py  generate_circom_compatible.py  generate_correct_bn254.py  generate_final_ecdsa.py  minimal_debug.json  minimal_working.json  minimal_working_test.py  package-lock.json  package.json  reverse_engineer.py  simple_test.json  (+6 more)
zk-monolithic-experiments/build_debug/: addition_test.wtns  complete.wtns  debug.wtns  debug_real.wtns  field_test.wtns  final_debug.wtns  minimal_debug.wtns
zk-monolithic-experiments/scripts/: BN254.py  ecdsa_output.json  generate-ecdsa-native-input.js  proof-cred-bind.sh  proof-ecdsa-native.sh  proof-eddsa-keyDer.sh  proof-eddsa-sigVerify.sh
zk-monolithic-nova/: package.json
zk-monolithic-nova/scripts/: proof.sh
zk-monolithic/scripts/: proof-only.sh  proof-plonk.sh  proof.sh
zk-proof/: package-lock.json  package.json
zk-proof/scripts/: proof.sh
zk-recursive/: Cargo.toml
zk-recursive-nova/: Cargo.toml
zk-recursive-nova/src/: main.rs
zk-recursive-plonky2/: Cargo.toml
zk-recursive-plonky2/inputs/: backup_inner.json  inner.json  inner_input.json  input.json  input_extended.json  outer.json  outer_extended.json  outer_input.json  outer_p256_input.json
zk-recursive-plonky2/inputs/experiments/: bip32_key_der.json  inner_key_der.json  inner_sig_verify.json  inner_sig_verify_static.json  outer_key_der.json  outer_sig_verify.json  outer_sig_verify_old.json
zk-recursive-plonky2/inputs/tools/: check.rs  check_bip32_key_der_data.rs  check_inner_sig_verify_static_data.rs  check_outer_data.rs  check_outer_extended_data.rs  check_outer_key_der_data.rs  check_outer_sig_verify_data.rs  generate.rs  generate_bip32_key_der_data.rs  generate_inner_sig_verify_static_data.rs  generate_keypair.rs  generate_outer_data.rs  generate_outer_extended_data.rs  generate_outer_key_der_data.rs  generate_outer_sig_verify_data.rs  generate_poseidon.rs  generate_poseidon_extended.rs  generate_test_data.rs  proof.sh  proof_extended.sh
zk-recursive-plonky2/src/: lib.rs  main.rs
zk-recursive-plonky2/src/circuits/: debug.rs  inner.rs  inner_extended.rs  mod.rs  msg_pk_c_binding.rs  outer.rs  outer_extended.rs  outer_only.rs  outer_p256.rs
zk-recursive-plonky2/src/circuits/experiments/: bip_32_key_der.rs  inner_key_der.rs  inner_sig_verify.rs  inner_sig_verify_static.rs  mod.rs  outer_key_der.rs  outer_sig_verify.rs
zk-recursive-plonky2/src/circuits/multi_step_recursion/: c1_2.rs  c3.rs  c4.rs  c5.rs
zk-recursive-plonky2/src/circuits/parallel_recursion/: c1.rs  c2.rs  c3.rs  c4.rs  c5.rs  mod.rs  msg_pk_c_binding.rs
zk-recursive-plonky2/src/circuits/serial_recursion/: c1.rs  c1_2.rs  c2.rs  c3.rs  c4.rs  c5.rs  mod.rs  msg_pk_c_binding.rs
zk-recursive-plonky2/src/commands/: debug.rs  experiments.rs  inner.rs  inner_extended.rs  mod.rs  msg_pk_c_binding.rs  multi_step_recursion.rs  outer.rs  outer_extended.rs  parallel_recursion.rs  serial_recursion.rs
zk-recursive-plonky2/src/reference/: mod.rs
zk-recursive-plonky2/src/snark/gadgets/: secp256k1_gadgets.rs
zk-recursive-plonky2/src/tests/: mod.rs
zk-recursive-plonky2/src/types/: input.rs
zk-recursive-plonky2/src/utils/: base64_decode.rs  bit_packing.rs  circuit_stats.rs  hmac_poseidon.rs  hmac_sha512.rs  key_derivation.rs  mod.rs  parsing.rs  sha256.rs
zk-recursive/src/: main.rs
zk-recursive/src/circuit/: mod.rs  outer.rs
zk-recursive/src/reference/: secp256k1_curve.rs  secp256k1_params.rs
zk-recursive/src/snark/: mod.rs
zk-recursive/src/snark/gadgets/: mod.rs  secp256k1_point_target.rs
zk-recursive/src/tests/: scalar_mul_test.rs
zk-recursive/src/utils/: derive.rs  mod.rs
zk-secp256r1/: compile-and-prove.sh  package-lock.json  package.json
zk-secp256r1/circuits/: ecdsa-verify.circom
zk-secp256r1/input/: eudi-wallet.json  prepared-input.json
zk-secp256r1/scripts/: prepare-ecdsa-input.js
(+177 files in other folders)
