[package]
name = "zk-recursive"
version = "0.1.0"
edition = "2024"

[dependencies]
nova-snark = { git = "https://github.com/microsoft/Nova" }
nova-scotia = { git = "https://github.com/nalinbhardwaj/Nova-Scotia" }

# arkworks core crates
ark-std = "0.5.0"
ark-relations = "0.5.1"
ark-r1cs-std = "0.5.0"
ark-ff = "0.5.0"
# BN254 and Groth16 compatibility
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
# elliptic curve for secp256k1
k256 = { version = "0.13.0", default-features = false, features = ["ecdsa", "sha256", "arithmetic"] }
# HMAC and SHA512
hmac = "0.12.1"
sha2 = "0.10.7"
digest = "0.10.7"
# field conversion utils
hex = "0.4.3"